force-app/main/default/objects/Project_Pricing__c/Project_Pricing__c.object-meta.xml
<CustomObject>
    <label>Project Pricing</label>
    <nameField>
        <label>Project Pricing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Pricings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>