force-app/main/default/objects/Project_Pricing__c/fields/Consultant_rate__c.field-meta.xml
<CustomField>
    <fullName>Consultant_rate__c</fullName>
    <label>Consultant rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>