force-app/main/default/objects/Project_Pricing__c/fields/Pricing_Unit__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Unit__c</fullName>
    <label>Pricing Unit</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hourly</fullName>
                <default>true</default>
                <label>Hourly</label>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>