force-app/main/default/objects/Project_Pricing__c/fields/Role_In_Project__c.field-meta.xml
<CustomField>
    <fullName>Role_In_Project__c</fullName>
    <label>Role In Project</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_in_Project</valueSetName>
    </valueSet>
</CustomField>